--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1274,6 +1274,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
 
   int gnutls_ocsp_status_request_get (gnutls_session_t session, gnutls_datum_t *response);
 
+  int gnutls_ocsp_status_request_is_checked (gnutls_session_t session, unsigned int flags);
 
 /* global state functions
  */
