--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1003,6 +1003,8 @@ FUNCS += functions/gnutls_ocsp_status_request_enable_client
 FUNCS += functions/gnutls_ocsp_status_request_enable_client.short
 FUNCS += functions/gnutls_ocsp_status_request_get
 FUNCS += functions/gnutls_ocsp_status_request_get.short
+FUNCS += functions/gnutls_ocsp_status_request_is_checked
+FUNCS += functions/gnutls_ocsp_status_request_is_checked.short
 FUNCS += functions/gnutls_openpgp_crt_check_hostname
 FUNCS += functions/gnutls_openpgp_crt_check_hostname.short
 FUNCS += functions/gnutls_openpgp_crt_deinit
@@ -1599,6 +1601,8 @@ FUNCS += functions/gnutls_sign_get_name
 FUNCS += functions/gnutls_sign_get_name.short
 FUNCS += functions/gnutls_sign_get_pk_algorithm
 FUNCS += functions/gnutls_sign_get_pk_algorithm.short
+FUNCS += functions/gnutls_sign_is_secure
+FUNCS += functions/gnutls_sign_is_secure.short
 FUNCS += functions/gnutls_sign_list
 FUNCS += functions/gnutls_sign_list.short
 FUNCS += functions/gnutls_srp_allocate_client_credentials
@@ -1633,12 +1637,16 @@ FUNCS += functions/gnutls_srp_verifier
 FUNCS += functions/gnutls_srp_verifier.short
 FUNCS += functions/gnutls_srtp_get_keys
 FUNCS += functions/gnutls_srtp_get_keys.short
+FUNCS += functions/gnutls_srtp_get_mki
+FUNCS += functions/gnutls_srtp_get_mki.short
 FUNCS += functions/gnutls_srtp_get_profile_id
 FUNCS += functions/gnutls_srtp_get_profile_id.short
 FUNCS += functions/gnutls_srtp_get_profile_name
 FUNCS += functions/gnutls_srtp_get_profile_name.short
 FUNCS += functions/gnutls_srtp_get_selected_profile
 FUNCS += functions/gnutls_srtp_get_selected_profile.short
+FUNCS += functions/gnutls_srtp_set_mki
+FUNCS += functions/gnutls_srtp_set_mki.short
 FUNCS += functions/gnutls_srtp_set_profile
 FUNCS += functions/gnutls_srtp_set_profile.short
 FUNCS += functions/gnutls_srtp_set_profile_direct
