--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -309,6 +309,7 @@ APIMANS += gnutls_ocsp_resp_verify.3
 APIMANS += gnutls_ocsp_resp_verify_direct.3
 APIMANS += gnutls_ocsp_status_request_enable_client.3
 APIMANS += gnutls_ocsp_status_request_get.3
+APIMANS += gnutls_ocsp_status_request_is_checked.3
 APIMANS += gnutls_openpgp_crt_check_hostname.3
 APIMANS += gnutls_openpgp_crt_deinit.3
 APIMANS += gnutls_openpgp_crt_export.3
@@ -607,6 +608,7 @@ APIMANS += gnutls_sign_get_hash_algorithm.3
 APIMANS += gnutls_sign_get_id.3
 APIMANS += gnutls_sign_get_name.3
 APIMANS += gnutls_sign_get_pk_algorithm.3
+APIMANS += gnutls_sign_is_secure.3
 APIMANS += gnutls_sign_list.3
 APIMANS += gnutls_srp_allocate_client_credentials.3
 APIMANS += gnutls_srp_allocate_server_credentials.3
@@ -624,9 +626,11 @@ APIMANS += gnutls_srp_set_server_credentials_file.3
 APIMANS += gnutls_srp_set_server_credentials_function.3
 APIMANS += gnutls_srp_verifier.3
 APIMANS += gnutls_srtp_get_keys.3
+APIMANS += gnutls_srtp_get_mki.3
 APIMANS += gnutls_srtp_get_profile_id.3
 APIMANS += gnutls_srtp_get_profile_name.3
 APIMANS += gnutls_srtp_get_selected_profile.3
+APIMANS += gnutls_srtp_set_mki.3
 APIMANS += gnutls_srtp_set_profile.3
 APIMANS += gnutls_srtp_set_profile_direct.3
 APIMANS += gnutls_store_commitment.3
