--- a/tests/cert-tests/Makefile.am
+++ b/tests/cert-tests/Makefile.am
@@ -21,7 +21,8 @@
 
 EXTRA_DIST = ca-no-pathlen.pem no-ca-or-pathlen.pem aki-cert.pem \
 	template-test.key template-test.pem template-test.tmpl \
-	funny-spacing.pem ca-certs.pem dane-test.rr cert-ecc256.pem
+	funny-spacing.pem ca-certs.pem dane-test.rr cert-ecc256.pem \
+	bmpstring.pem
 
 dist_check_SCRIPTS = pathlen aki template-test pem-decoding dane
 
