--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1207,6 +1207,8 @@ FUNCS += functions/gnutls_pkcs11_privkey_export_url
 FUNCS += functions/gnutls_pkcs11_privkey_export_url.short
 FUNCS += functions/gnutls_pkcs11_privkey_generate
 FUNCS += functions/gnutls_pkcs11_privkey_generate.short
+FUNCS += functions/gnutls_pkcs11_privkey_generate2
+FUNCS += functions/gnutls_pkcs11_privkey_generate2.short
 FUNCS += functions/gnutls_pkcs11_privkey_get_info
 FUNCS += functions/gnutls_pkcs11_privkey_get_info.short
 FUNCS += functions/gnutls_pkcs11_privkey_get_pk_algorithm
@@ -1937,6 +1939,8 @@ FUNCS += functions/gnutls_x509_crt_get_pk_dsa_raw
 FUNCS += functions/gnutls_x509_crt_get_pk_dsa_raw.short
 FUNCS += functions/gnutls_x509_crt_get_pk_rsa_raw
 FUNCS += functions/gnutls_x509_crt_get_pk_rsa_raw.short
+FUNCS += functions/gnutls_x509_crt_get_policy
+FUNCS += functions/gnutls_x509_crt_get_policy.short
 FUNCS += functions/gnutls_x509_crt_get_preferred_hash_algorithm
 FUNCS += functions/gnutls_x509_crt_get_preferred_hash_algorithm.short
 FUNCS += functions/gnutls_x509_crt_get_private_key_usage_period
@@ -1985,6 +1989,8 @@ FUNCS += functions/gnutls_x509_crt_list_import_pkcs11
 FUNCS += functions/gnutls_x509_crt_list_import_pkcs11.short
 FUNCS += functions/gnutls_x509_crt_list_verify
 FUNCS += functions/gnutls_x509_crt_list_verify.short
+FUNCS += functions/gnutls_x509_crt_policy_release
+FUNCS += functions/gnutls_x509_crt_policy_release.short
 FUNCS += functions/gnutls_x509_crt_print
 FUNCS += functions/gnutls_x509_crt_print.short
 FUNCS += functions/gnutls_x509_crt_privkey_sign
