--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -413,6 +413,7 @@ APIMANS += gnutls_pkcs11_obj_set_pin_function.3
 APIMANS += gnutls_pkcs11_privkey_deinit.3
 APIMANS += gnutls_pkcs11_privkey_export_url.3
 APIMANS += gnutls_pkcs11_privkey_generate.3
+APIMANS += gnutls_pkcs11_privkey_generate2.3
 APIMANS += gnutls_pkcs11_privkey_get_info.3
 APIMANS += gnutls_pkcs11_privkey_get_pk_algorithm.3
 APIMANS += gnutls_pkcs11_privkey_import_url.3
@@ -778,6 +779,7 @@ APIMANS += gnutls_x509_crt_get_key_usage.3
 APIMANS += gnutls_x509_crt_get_pk_algorithm.3
 APIMANS += gnutls_x509_crt_get_pk_dsa_raw.3
 APIMANS += gnutls_x509_crt_get_pk_rsa_raw.3
+APIMANS += gnutls_x509_crt_get_policy.3
 APIMANS += gnutls_x509_crt_get_preferred_hash_algorithm.3
 APIMANS += gnutls_x509_crt_get_private_key_usage_period.3
 APIMANS += gnutls_x509_crt_get_proxy.3
@@ -802,6 +804,7 @@ APIMANS += gnutls_x509_crt_list_import.3
 APIMANS += gnutls_x509_crt_list_import2.3
 APIMANS += gnutls_x509_crt_list_import_pkcs11.3
 APIMANS += gnutls_x509_crt_list_verify.3
+APIMANS += gnutls_x509_crt_policy_release.3
 APIMANS += gnutls_x509_crt_print.3
 APIMANS += gnutls_x509_crt_privkey_sign.3
 APIMANS += gnutls_x509_crt_set_activation_time.3
