Include libiconv in Libs.private
This makes static linking succeed if the library is configured to
use libiconv.

Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/lib/gnutls.pc.in
+++ b/lib/gnutls.pc.in
@@ -19,6 +19,6 @@ Description: Transport Security Layer implementation for the GNU system
 URL: http://www.gnu.org/software/gnutls/
 Version: @VERSION@
 Libs: -L${libdir} -lgnutls
-Libs.private: @LTLIBNETTLE@
+Libs.private: @LTLIBNETTLE@ @LTLIBICONV@
 @GNUTLS_REQUIRES_PRIVATE@
 Cflags: -I${includedir}
